--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#2.0-preview"
+    "polymer": "Polymer/polymer#2.0-preview",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0-preview"
   }
 }
