--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,10 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#2.0-preview",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0-preview"
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0-preview",
+    "iron-icon": "PolymerElements/iron-icon#2.0-preview",
+    "paper-icon-button": "PolymerElements/paper-icon-button#2.0-preview",
+    "iron-icons": "PolymerElements/iron-icons#2.0-preview",
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#2.0-preview"
   }
 }
