--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "iron-icon": "PolymerElements/iron-icon#2.0-preview",
     "paper-icon-button": "PolymerElements/paper-icon-button#2.0-preview",
     "iron-icons": "PolymerElements/iron-icons#2.0-preview",
-    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#2.0-preview"
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#2.0-preview",
+    "iron-pages": "PolymerElements/iron-pages#2.0-preview"
   }
 }
