--- a/package.json
+++ b/package.json
@@ -7,13 +7,8 @@
   "author": "Sean Wood <woodywoodsta@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
     "babel-preset-browser": "http://gitsub:8282/tooling/babel-preset-browser@^7",
-    "babelify": "^7",
-    "browserify": "^13",
-    "concurrently": "^2",
-    "push-dir": "^0.2.2",
-    "watchify": "^3"
+    "push-dir": "^0.2.2"
   },
   "scripts": {
     "build": "abc",
